# hello-world-ocaml

./: .gitignore  Makefile  configure  dune  dune-project  flake.nix  hello-world.opam  hello-world.opam.locked  shell.nix
.github/workflows/: Makefile  build-and-test.jsonnet  build-and-test.yml  build-test-nix.jsonnet  build-test-nix.yml  lib.libsonnet
hello/: Makefile  hello.opam
hello/test/: dune  hello.ml
interfaces/: Msg.ml
lib/: dune
scripts/: simple_script.sh
src/core/: dune
src/lib/: Msg.ml  Terminal.ml  Terminal.mli  dune
src/main/: Main.ml  dune
src/tests/: dune
