opam-version: "2.0"
name: "hello-world"
version: "0.2.0"
synopsis: "Hello world, in OCaml"
description: """
Hello world, in OCaml
"""

maintainer: "Yoann Padioleau <pad@semgrep.com>"
authors: [ "Yoann Padioleau <pad@semgrep.com>" ]
license: "LGPL-2.1"
homepage: "http://hello-world-ocaml.com"
dev-repo: "git+https://github.com/semgrep/hello-world-ocaml"
bug-reports: "https://github.com/emgrep/hello-world-ocaml/issues"

depends: [
  "dune"
  "ppxlib"
  "ppx_inline_test"
]

build: [make]
